--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A simple game of tic-tac-toe, written in HTML, CSS and vanilla JavaScript">
-  <meta rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Tic-Tac-Toe</title>
 </head>
 
