Change the game square tags
I realized that I would need an additional value field, which meant that the game squares would be better as buttons than as divs.  Also makes the game more accessible.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
 <body>
   <h1>Tic-Tac-Toe</h1>
   <section class="game-board">
-    <div class="game-square 0"></div>
-    <div class="game-square 1"></div>
-    <div class="game-square 2"></div>
-    <div class="game-square 3"></div>
-    <div class="game-square 4"></div>
-    <div class="game-square 5"></div>
-    <div class="game-square 6"></div>
-    <div class="game-square 7"></div>
-    <div class="game-square 8"></div>
+    <button value="0" type="button" class="game-square"></button>
+    <button value="1" type="button" class="game-square"></button>
+    <button value="2" type="button" class="game-square"></button>
+    <button value="3" type="button" class="game-square"></button>
+    <button value="4" type="button" class="game-square"></button>
+    <button value="5" type="button" class="game-square"></button>
+    <button value="6" type="button" class="game-square"></button>
+    <button value="7" type="button" class="game-square"></button>
+    <button value="8" type="button" class="game-square"></button>
   </section>
 
 
-  <!-- reserved for if I want to add a "choose Xs or Os" functionality in future
-  <button type="button">Begin</button>
-  -->
+  <button type="button" class="initialize">Let's Play</button>
 
 
   <script src="./main.js"></script>
