--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </section>
 
 
-  <button type="button" class="initialize">Let's Play</button>
+  <button type="button" class="initialize">Begin Game</button>
+  <h2></h2>
 
 
   <script src="./main.js"></script>
