Add scoreboard field

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <button type="button" class="initialize">Begin Game</button>
   <h2></h2>
-
+  <section class="score-board"></section>
 
   <script src="./main.js"></script>
 </body>
