Add new button class and change script link

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   </section>
 
 
-  <button type="button" class="initialize">Begin Game</button>
+  <button type="button" class="initializer light-button">Begin Game</button>
   <h2></h2>
   <section class="score-board"></section>
 
-  <script src="./main.js"></script>
+  <script src="./mainOOP.js"></script>
 </body>
 
 </html>
