--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h2></h2>
   <section class="score-board"></section>
 
-  <script src="./mainOOP.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
